--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,9 @@ spring:
     hikari:
       maximum-pool-size: 8
   jpa:
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
+    database-platform: com.heraizen.gpet.config.JsonbPostgresDialect
+    hibernate:
+      ddl-auto: update
 
 
 server:
